2008-01-25  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (HandleCommandLineArgs): Accept
	--debug LEVEL, instead of just -d.
	(Main): Display warning if there are no matching files.
	(wanted): Add git, darcs, arch version control directories
	to default ignore list.

2008-08-22  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (Help): Work around 5.10 bug for pod2text.

2007-05-01  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (HandleFile): Variable $msg
	had wrong number of double quotes.
	(HandleFile): Missing semicolon from statement inside
	'$y eq $YEAR'.
	(wanted): $ignore pattern improved to cinlude ".#thisfile".

2006-02-19  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl:
	(HandleCommandLineArgs): New --ignore option and variable
	$OPT_REGEXP_IGNORE
	(wanted): Check user's

2005-08-17  Jari Aalto  <jari.aalto@cante.net>

	* emacs-util.pl (UniqueRoots2): Removed. Not used.
	(Help): Added option --scan-type
	(HandleCommandLineArgs): Added $OPT_SCAN_TYPE
	(wanted): Check  $OPT_SCAN_TYPE and ignore all
	symlinks.

2005-05-19  Jari Aalto  <jari.aalto@cante.net>

	* Makefile:  Removed version
	control Id-tag.

	* makefile.pl: Removed version
	control Id-tag. Corrected #!-line.

	* find-version.pl: Removed version
	control Id-tag. Corrected #!-line.

	* emacs-util.pl: Removed version
	control Id-tag. Corrected #!-line.
	(HELP::AUTHOR): Removed CVS conflict markers.
	(TimeDiffString): Renamed, was TimDiffString.

	* emacs-compile.pl: Removed version
	control Id-tag. Corrected #!-line.

	* emacs-1-fix.pl: Small
	changes to make the code more clean.

	* ddir.pl: Corrected #!-line. Added Main(). Small
	changes to make the code more clean.

	* copyright-update.pl (TOP OF FILE): Removed version
	control Id-tag. Corrected #!-line. Removed extra newlines
	from the code.

2005-05-08  Jari Aalto  <jari.aalto@cante.net>

	* makefile.pl (Initialize): Added missing semicolon to $CONTACT.