@@ -1,3 +1,8 @@
+2008-09-14  Jari Aalto  <jari.aalto@cante.net>
+
+	* copyright-update.pl (HELP): Document new option --line RE.
+	(HandleFile): Chnage only --line RE lines.
+
 2008-01-25  Jari Aalto  <jari.aalto@cante.net>
 
 	* copyright-update.pl (HandleCommandLineArgs): Accept
